Tree: Fix contrast for focused items
Fixes the contrast of focused items when the tree itself is not in
focus.

Correction following the BITV testing. Make sure to have good contrasts
within your own theme.

--- a/src/main/js/apps/shipping/automaton-test.css
+++ b/src/main/js/apps/shipping/automaton-test.css
@@ -129,10 +129,14 @@ ul.tree-widget button.caret:hover
 
 }
 
-ul.tree-widget .focus .btn-link
+ul.tree-widget:focus-within .focus .btn-link
 {
     color: var(--white);
+}
 
+ul.tree-widget .focus .btn-link
+{
+    color: var(--dark);
 }
 
 /*
